@@ -30,6 +30,7 @@ import androidx.appcompat.app.AppCompatActivity;
 import androidx.appcompat.content.res.AppCompatResources;
 import androidx.core.app.NotificationCompat;
 import androidx.core.app.ServiceCompat;
+import androidx.core.math.MathUtils;
 import androidx.fragment.app.FragmentManager;
 import androidx.preference.PreferenceManager;
 
@@ -60,7 +61,7 @@ import org.schabi.newpipe.extractor.playlist.PlaylistInfo;
 import org.schabi.newpipe.extractor.stream.StreamInfo;
 import org.schabi.newpipe.ktx.ExceptionUtils;
 import org.schabi.newpipe.local.dialog.PlaylistDialog;
-import org.schabi.newpipe.player.MainPlayer;
+import org.schabi.newpipe.player.PlayerType;
 import org.schabi.newpipe.player.helper.PlayerHelper;
 import org.schabi.newpipe.player.helper.PlayerHolder;
 import org.schabi.newpipe.player.playqueue.ChannelPlayQueue;
@@ -81,7 +82,6 @@ import org.schabi.newpipe.views.FocusOverlayView;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import icepick.Icepick;
@@ -452,7 +452,7 @@ public class RouterActivity extends AppCompatActivity {
             }
         }
 
-        selectedRadioPosition = Math.min(Math.max(-1, selectedRadioPosition), choices.size() - 1);
+        selectedRadioPosition = MathUtils.clamp(selectedRadioPosition, -1, choices.size() - 1);
         if (selectedRadioPosition != -1) {
             ((RadioButton) radioGroup.getChildAt(selectedRadioPosition)).setChecked(true);
         }
@@ -630,8 +630,8 @@ public class RouterActivity extends AppCompatActivity {
         }
 
         // ...the player is not running or in normal Video-mode/type
-        final MainPlayer.PlayerType playerType = PlayerHolder.getInstance().getType();
-        return playerType == null || playerType == MainPlayer.PlayerType.VIDEO;
+        final PlayerType playerType = PlayerHolder.getInstance().getType();
+        return playerType == null || playerType == PlayerType.MAIN;
     }
 
     private void openAddToPlaylistDialog() {
@@ -649,7 +649,7 @@ public class RouterActivity extends AppCompatActivity {
                 .subscribe(
                         info -> PlaylistDialog.createCorrespondingDialog(
                                 getThemeWrapperContext(),
-                                Collections.singletonList(new StreamEntity(info)),
+                                List.of(new StreamEntity(info)),
                                 playlistDialog -> {
                                     playlistDialog.setOnDismissListener(dialog -> finish());
 
